fixed the vertical alignment issues on the artiles section

--- a/sites/all/themes/laporteLibrary/assets/less/frontPage.less
+++ b/sites/all/themes/laporteLibrary/assets/less/frontPage.less
@@ -111,6 +111,7 @@
   } 
   .views-row{
     display:inline-block;
+    vertical-align: top;
   }
 
 }
@@ -119,6 +120,7 @@
   justify-content: space-around;
   //flex-flow: row wrap;
   flex-flow: row;
+  align-items:flex-start;
 }
 .articleHighlight{
   width:33%;
